Less steps + run in detacted mode

--- a/TRADE-Tradecoin2/Dockerfile
+++ b/TRADE-Tradecoin2/Dockerfile
@@ -56,7 +56,7 @@ WORKDIR /Tradecoin
 RUN qmake USE_UPNP=-
 RUN make
 
-COPY entrypoint.sh /
-RUN chmod 755 /entrypoint.sh
+COPY entrypoint.sh /usr/bin/entry
+RUN chmod 755 /usr/bin/entry
 
-
+ENTRYPOINT /usr/bin/entry
